# GlassScout

./: .gitignore  README.md  eslint.config.mjs  package-lock.json  package.json
.github/workflows/: ci.yml  desktop-release.yml
docs/: FM26_MAPPING_STATUS.md  fm26-live-memory-research.md  fm26-parser-investigation.md
scripts/: fm26-read-probe.ps1
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/entity-maps/: index.json
src-tauri/icons/: icon.icns
src-tauri/migrations/: 001_initial.sql
src-tauri/src/: commands.rs  connector.rs  fm_dossier.rs  lib.rs  main.rs  mapping_lab.rs  player_face.rs  tactic_file.rs  visibility.rs
src-tauri/src/data/: clubs.rs  mod.rs  nations.rs  players.rs  scout_knowledge.rs  tactics.rs
src-tauri/src/fm26/: memory.rs  mod.rs  offsets.rs  parser.rs  permissions.rs  process.rs  roles.rs  scanner.rs  structs.rs  tactics.rs  validator.rs
src-tauri/src/graphics/: config_xml.rs  faces.rs  logos.rs  mod.rs
src/app/: globals.css  layout.tsx  page.tsx
src/components/: app-sidebar.tsx  club-logo.tsx  club-profile-screen.tsx  confidence-ring.tsx  dashboard-screen.tsx  data-sync-screen.tsx  favorited-players-screen.tsx  glass-scout-app.tsx  live-data-state.tsx  memory-screen.tsx  my-team-screen.tsx  player-face.tsx  player-profile-screen.tsx  recruitment-screen.tsx  role-dna-screen.tsx  settings-screen.tsx  startup-screen.tsx  tactical-board.tsx  tactics-screen.tsx  topbar.tsx
src/domain/: adapters.ts  distribution.ts  export-watcher.ts  live-data.ts  player-evaluation.ts  product.test.ts  (+3 more)
(+1 files in other folders)
