[package]
name = "glassscout-fm26"
version = "0.1.18"
description = "Read-only desktop recruitment workspace for Football Manager 2026"
authors = ["GlassScout"]
edition = "2021"

[lib]
name = "glassscout_fm26_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
base64 = "0.22"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
rusqlite = { version = "0.32", features = ["bundled"] }
tauri = { version = "2", features = [] }
tauri-plugin-sql = { version = "2", features = ["sqlite"] }
